feat: 编写注册组件结构模板.

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "debug": "^2.6.3",
     "ejs": "~2.3.3",
     "koa": "^2.2.0",
