feat: 用户注册前后端联调.

--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "koa2-cors": "^2.0.6",
     "mongoose": "^5.5.5"
   },
   "devDependencies": {
