--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.6",
     "debug": "^2.6.3",
     "ejs": "~2.3.3",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
