feat: 首页重新布局.

--- a/mall/package.json
+++ b/mall/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "fastclick": "^1.0.6",
     "vant": "^1.6.16",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
@@ -22,6 +23,10 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
