feat: 新增 Vuex 管理项目状态.

--- a/mall/package.json
+++ b/mall/package.json
@@ -15,7 +15,8 @@
     "vant": "^1.6.16",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
