--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,9 @@
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
     "koa2-cors": "^2.0.6",
-    "mongoose": "^5.5.5"
+    "mongoose": "^5.5.5",
+    "request": "^2.88.0",
+    "silly-datetime": "^0.1.2"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
