feat: 解决koa cors 跨域读写 cookie 失败问题.

--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "koa-logger": "^2.0.1",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
+    "koa-session": "^5.12.3",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
     "koa2-cors": "^2.0.6",
